--- a/package.json
+++ b/package.json
@@ -7,23 +7,27 @@
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "jest": "jest --runInBand --forceExit"
   },
   "dependencies": {
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.0",
-    "dotenv": "^16.3.1",
+    "@types/jest": "^29.5.11",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "express-validator": "^6.14.2",
+    "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "mongodb": "^6.3.0",
-    "supertest": "^6.3.3",
-    "uuid": "^9.0.0"
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.21",
     "@types/node": "^18.11.16",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.4"
   }
 }
